--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
-<?xml version='1.0' encoding='utf-8'?>
+<?xml version='1.0' encoding='utf-8' ?>
 <resources>
-  <string name="app_name">user</string>
-  <string name="title_activity_main">user</string>
+  <string name="app_name">Cube J Empire</string>
+  <string name="title_activity_main">Cube J Empire</string>
   <string name="package_name">io.ionic.starter</string>
   <string name="custom_url_scheme">io.ionic.starter</string>
   <string name="ionic_app_id">a77831ad</string>
